adds two states and various content updates

--- a/index.html
+++ b/index.html
@@ -8,21 +8,20 @@
     <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-    
+
   </head>
   <body>
-  <h1>CodeJournal</h1>
+  <h2 class="fRight">CodeJournal</h2>
   <nav>
     <ul>
       <li><a ui-sref="home">home</a></li>
       <li><a ui-sref="journal">journal</a></li>
       <li><a ui-sref="jquery">jquery</a></li>
+      <li><a ui-sref="javascript">javascript</a></li>
       <li><a ui-sref="misc">misc</a></li>
     </ul>
   </nav>
 <main ui-view></main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="./js/myScripts.js"></script>
 
 
 <!-- ------------Scripts ------------------ -->
@@ -41,6 +40,7 @@
 <script src="./states/journal/journalCtrl.js"></script>
 <script src="./states/jquery/jqueryCtrl.js"></script>
 <script src="./states/misc/miscCtrl.js"></script>
+<script src="./states/ecma/ecmaCtrl.js"></script>
 
   </body>
 </html>
