--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -1,7 +1,7 @@
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="journal-entry entry">
   <h2 class="date">Tuesday May 2nd 2017</h2>
-  <h4 class="sleep">Slept: 9 hours</h4><br>
+  <h4 class="sleep">Slept: 9 hours</h4><br><br />
   <h3 class="subtitle">First day back. Feeling good. Lots and lots to do.</h3>
 
   <br>
@@ -19,21 +19,44 @@
     <li>implemented ngAnimate: Make sure it's version matches that of the angular you are using!</li>
     <li>Completed <a href="https://www.freecodecamp.com/challenges/search-and-replace">Search and Replace on FCC</a> </li>
   </ol>
-<hr>
-  <h2 class="date">Wednesday May 3rd, 2017</h2>
-  <h4 class="sleep">Slept: 8 hours</h4><br>
-  <h3 class="subtitle">Feel Great. .replace() is dead simple. Ready to take on jQuery effects</h3>
+  <hr>
+    <h2 class="date">Wednesday May 3rd, 2017</h2>
+    <h4 class="sleep">Slept: 8 hours</h4><br><br />
+    <h3 class="subtitle">Feel Great. .replace() is dead simple. Ready to take on jQuery effects</h3>
 
-  <br>
-  <h3>To do:</h3>
-  <ol id="sidebar" class="todo">
-    <li>3 jquery tuts+ effects vids</li>
-    <li>tea-bags, sugar-substitute</li>
-    <li>transfer jquery notes in to codejournal</li>
-  </ol><br>
-  <h3>Done: </h3>
-  <ol class="done">
+    <br>
+    <h3>To do:</h3>
+    <ol id="sidebar" class="todo">
+      <li>3 jquery tuts+ effects vids</li>
+      <li>tea-bags, sugar-substitute</li>
+      <li>transfer jquery notes in to codejournal</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>Completed jquery events video with a form that appears .on('click');</li>
+      <li>Increasing comfort in sass-maps. I use the religiously, now.</li>
+      <li>Continuing to transfer notes into codejournal and am redefining classes</li>
+
+    </ol>
+    <hr>
+      <h2 class="date">Thursday May 4th, 2017</h2>
+      <h4 class="sleep">Slept: 8 hours</h4><br><br>
+      <h3 class="subtitle">Feel Good. Starting to feel like things are less simple. Reviewing this jquery
+      is easy and am getting more out of it. I'm iterating over SASS but ng custom directives video is looming over my head.
+    Let's get to work.</h3>
+
+      <br>
+      <h3>To do:</h3>
+      <ol id="sidebar" class="todo">
+        <li>2 jquery tuts+ effects vids</li>
+        <li>sugar-substitute</li>
+        <li>transfer jquery notes in to codejournal</li>
+        <li>one FCC algorithm</li>
+        <li>sass vid</li>
+      </ol><br>
+      <h3>Done: </h3>
+      <ol class="done">
 
 
-  </ol>
+      </ol>
 </div>
