--- a/states/misc/misc.html
+++ b/states/misc/misc.html
@@ -1,6 +1,7 @@
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=sunburst"></script>
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="misc-entry entry">
-<h3>Interesting point about this:</h3>
+<h3 class="ltblue">Interesting point about this:</h3>
 (<span><a href="http://stackoverflow.com/questions/7479282/this-vs-this">FROM HERE</a></span>)
 
 <pre>
@@ -10,7 +11,7 @@
 
   For instance
 
-<pre class="prettyprint">
+<pre class="prettyprint w60">
   $("#someElement").click(function() {
       this;    // the element itself
       $(this); // a jQuery wrapper-object around the element
