--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -1,3 +1,4 @@
+<div class="journal-container">
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="journal-entry entry">
   <!-- <hr>
@@ -101,4 +102,7 @@
         <li>implemented ngAnimate: Make sure it's version matches that of the angular you are using!</li>
         <li>Completed <a href="https://www.freecodecamp.com/challenges/search-and-replace">Search and Replace on FCC</a> </li>
       </ol>
+</div>
+
+
 </div>
