--- a/states/misc/misc.html
+++ b/states/misc/misc.html
@@ -1,4 +1,5 @@
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=sunburst"></script>
+<div class="misc-container">
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="misc-entry entry">
 <h3 class="ltblue">Interesting point about this:</h3>
@@ -20,4 +21,7 @@
 
 <hr>
 </pre>
+</div>
+
+
 </div>
