💩 the bed with this file. Please don't fire me.

--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -1,7 +1,9 @@
+<div class="ecma-container">
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
+
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="ecma-entry entry">
-  <pre>
+<pre>
 
 <h2 class="ltblue">Nice version of isPalindrome() using regex</h2>
 <h4><a href="https://medium.freecodecamp.com/two-ways-to-check-for-palindromes-in-javascript-64fea8191fd7">FCC Link</a></h4>
@@ -80,3 +82,6 @@
   </pre>
 </div>
 <!--entry end-->
+
+
+</div>
