--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a ui-sref="jquery">jquery</a></li>
       <li><a ui-sref="javascript">javascript</a></li>
       <li><a ui-sref="misc">misc</a></li>
-      <li><a ui-sref="sass">sass</a></li>
+      <li><a ui-sref="sass">sass/css</a></li>
     </ul>
   </nav>
 <main ui-view></main>
