--- a/states/jquery/jquery.html
+++ b/states/jquery/jquery.html
@@ -13,6 +13,7 @@
     //example snippet
   }
 </pre> -->
+
 <hr>
 <h4><a href="https://youtu.be/x_Rh6qCmN5s?list=PLHJPCYLtEMaKdvFGcFk3ud-FEJv5j5dwR">tuts+ video link</a></h4>
 <i class="dkred">
@@ -56,7 +57,6 @@ I can use the call method & send another arg to the doIt function;
   })</pre>
   <p>This will cause all things but the button to hide</p>
   <hr>
-  !Important!
 
   How to execute code/animation after completion of one animation?
   SIMPLE!
@@ -73,6 +73,8 @@ I can use the call method & send another arg to the doIt function;
     obj.doIt.call(this, btn.siblings());
   })
   </pre>
+  Here's another example *see the "completed" log to console.
+  <img class="w40" src="img/completed.png" alt="">
   <span class="dkred">You can also do a <b>.delay(1200)</b></span>
 
   <a href="https://youtu.be/BOx8FzOTFfc?list=PLHJPCYLtEMaKdvFGcFk3ud-FEJv5j5dwR&t=115">Tuts+ Video</a>
