--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -1,7 +1,7 @@
 <div class="journal-container">
-<aside><span class="rot90">{{state}}</span></aside>
-<div class="journal-entry entry">
-  <!-- <hr>
+  <aside><span class="rot90">{{state}}</span></aside>
+  <div class="journal-entry entry">
+    <!-- <hr>
     <h2 class="date">Thursday May 4th, 2017</h2>
     <h4 class="sleep">Slept: 8 hours</h4><br><br>
     <h3 class="subtitle">Feel Good. Starting to feel like things are less simple. Reviewing this jquery
@@ -23,46 +23,68 @@
 
     </ol>   -->
     <hr>
-      <h2 class="date">Friday May 5th, 2017</h2>
-      <h4 class="sleep">Slept: 9 hours</h4><br><br>
-      <h3 class="subtitle">Javascript problem killed my time, but I finally finished it (<a  target="_blank" href="https://www.freecodecamp.com/challenges/pig-latin">FCC Pig Latin</a>) I discovered a new method <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/includes" target="_blank">.includes()</a> Doing the problem without it was a PITA & 35 lines of code. Today I'm going to continue with SASS and loading up of the 'ecma' state with higher order functions (transferring notes from notes I took last year.) --This, as well as other stuff I have on my plate-JQuery, and some FEM videos.</h3>
+    <h2 class="date">Saturday May 7th, 2017</h2>
+    <h4 class="sleep">Slept: 8 hours</h4><br><br>
+    <h3 class="subtitle">Feel Great. Yesterday I tackled a minor js (fcc) problem.
+    I got @import down in SCSS. Accomplished lots of styling problems in this app.
+    Learned more about 'this' via jquery <a target="_blank" href="https://youtu.be/x_Rh6qCmN5s?list=PLHJPCYLtEMaKdvFGcFk3ud-FEJv5j5dwR">tutorial</a>. Added a few new states to the app. Learned about a common problem I've had regarding running an animation upon completion of another. The answer is found in callbacks, or .delay(). Lots of good stuff.</h3>
 
-      <br>
-      <h3>To do:</h3>
-      <ol id="sidebar" class="todo">
-        <li>2 jquery tuts+ effects vids</li>
-        <li>sugar-substitute</li>
-        <li>transfer jquery notes in to codejournal</li>
-        <li>one FCC algorithm</li>
-        <li>sass vid</li>
-      </ol><br>
-      <h3>Done: </h3>
-      <ol class="done">
+    <br>
+    <h3>To do:</h3>
+    <ol id="sidebar" class="todo">
+      <li>DevMtn cust directives vid.</li>
+      <li>2 jquery tuts+ effects vids</li>
+      <li>sugar-substitute</li>
+      <li>transfer jquery notes in to codejournal</li>
+      <li>Continue sass vids</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
 
 
-      </ol>
+    </ol>
     <hr>
-      <h2 class="date">Thursday May 4th, 2017</h2>
-      <h4 class="sleep">Slept: 8 hours</h4><br><br>
-      <h3 class="subtitle">Feel Good. Starting to feel like things are less simple. Reviewing this jquery
+    <h2 class="date">Friday May 6th, 2017</h2>
+    <h4 class="sleep">Slept: 9 hours</h4><br><br>
+    <h3 class="subtitle">Javascript problem killed my time, but I finally finished it (<a  target="_blank" href="https://www.freecodecamp.com/challenges/pig-latin">FCC Pig Latin</a>) I discovered a new method <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/includes" target="_blank">.includes()</a> Doing the problem without it was a PITA & 35 lines of code. Today I'm going to continue with SASS and loading up of the 'ecma' state with higher order functions (transferring notes from notes I took last year.) --This, as well as other stuff I have on my plate-JQuery, and some FEM videos.</h3>
+
+    <br>
+    <h3>To do:</h3>
+    <ol id="sidebar" class="todo">
+      <li>2 jquery tuts+ effects vids</li>
+      <li>sugar-substitute</li>
+      <li>transfer jquery notes in to codejournal</li>
+      <li>one FCC algorithm</li>
+      <li>sass vid</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+    <li>two tuts+ fx tutorials</li>
+    <li>sass vids: (I'm about half-way through)</li>
+
+    </ol>
+    <hr>
+    <h2 class="date">Thursday May 4th, 2017</h2>
+    <h4 class="sleep">Slept: 8 hours</h4><br><br>
+    <h3 class="subtitle">Feel Good. Starting to feel like things are less simple. Reviewing this jquery
       is easy and am getting more out of it. I'm iterating over SASS but ng custom directives video is looming over my head.
     Let's get to work.</h3>
 
-      <br>
-      <h3>To do:</h3>
-      <ol id="sidebar" class="todo">
-        <li>2 jquery tuts+ effects vids</li>
-        <li>sugar-substitute</li>
-        <li>transfer jquery notes in to codejournal</li>
-        <li>one FCC algorithm</li>
-        <li>sass vid</li>
-      </ol><br>
-      <h3>Done: </h3>
-      <ol class="done">
+    <br>
+    <h3>To do:</h3>
+    <ol id="sidebar" class="todo">
+      <li>2 jquery tuts+ effects vids</li>
+      <li>sugar-substitute</li>
+      <li>transfer jquery notes in to codejournal</li>
+      <li>one FCC algorithm</li>
+      <li>sass vid</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
 
 
-      </ol>
-  <hr>
+    </ol>
+    <hr>
     <h2 class="date">Wednesday May 3rd, 2017</h2>
     <h4 class="sleep">Slept: 8 hours</h4><br><br />
     <h3 class="subtitle">Feel Great. .replace() is dead simple. Ready to take on jQuery effects</h3>
@@ -82,27 +104,27 @@
 
     </ol>
 
-      <hr>
-      <h2 class="date">Tuesday May 2nd 2017</h2>
-      <h4 class="sleep">Slept: 9 hours</h4><br><br />
-      <h3 class="subtitle">First day back. Feeling good. Lots and lots to do.</h3>
+    <hr>
+    <h2 class="date">Tuesday May 2nd 2017</h2>
+    <h4 class="sleep">Slept: 9 hours</h4><br><br />
+    <h3 class="subtitle">First day back. Feeling good. Lots and lots to do.</h3>
 
-      <br>
-      <h3>To do:</h3>
-      <ol id="sidebar" class="todo">
-        <li>3 jquery tuts+ effects vids</li>
-          <li>tea-bags, sugar-substitute</li>
-      </ol><br>
-      <h3>Done: </h3>
-      <ol class="done">
-        <li>sass vid <a target="_blank" href="https://www.youtube.com/watch?v=JurZCCs1DNc&amp;index=7&amp;list=PLCVM0tBM5nrSHdeXFJE5eXdURhL97FiyJ">Nesting in Sass</a></li>
-        <li>sass vid <a target="_blank" href="https://youtu.be/sxBfY0nnGbw?list=PLCVM0tBM5nrSHdeXFJE5eXdURhL97FiyJ">Nested Properties in Sass</a></li>
-        <li>sass vid <a target="_blank" href="https://youtu.be/HoHf_aTlfG0?list=PLCVM0tBM5nrSHdeXFJE5eXdURhL97FiyJ">Sass Variables</a></li>
-        <li>sass vid on sass data structures & sass maps "map-get"!</li>
-        <li>implemented ngAnimate: Make sure it's version matches that of the angular you are using!</li>
-        <li>Completed <a href="https://www.freecodecamp.com/challenges/search-and-replace">Search and Replace on FCC</a> </li>
-      </ol>
-</div>
+    <br>
+    <h3>To do:</h3>
+    <ol id="sidebar" class="todo">
+      <li>3 jquery tuts+ effects vids</li>
+      <li>tea-bags, sugar-substitute</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>sass vid <a target="_blank" href="https://www.youtube.com/watch?v=JurZCCs1DNc&amp;index=7&amp;list=PLCVM0tBM5nrSHdeXFJE5eXdURhL97FiyJ">Nesting in Sass</a></li>
+      <li>sass vid <a target="_blank" href="https://youtu.be/sxBfY0nnGbw?list=PLCVM0tBM5nrSHdeXFJE5eXdURhL97FiyJ">Nested Properties in Sass</a></li>
+      <li>sass vid <a target="_blank" href="https://youtu.be/HoHf_aTlfG0?list=PLCVM0tBM5nrSHdeXFJE5eXdURhL97FiyJ">Sass Variables</a></li>
+      <li>sass vid on sass data structures & sass maps "map-get"!</li>
+      <li>implemented ngAnimate: Make sure it's version matches that of the angular you are using!</li>
+      <li>Completed <a href="https://www.freecodecamp.com/challenges/search-and-replace">Search and Replace on FCC</a> </li>
+    </ol>
+  </div>
 
 
 </div>
