--- a/directives/navdirective.html
+++ b/directives/navdirective.html
@@ -1,12 +1,15 @@
-<h2 id="appName">Code Journal</h2>
+<!-- <aside><span class="rot90">{{state}}</span></aside> -->
+</h1><h2 id="appName">Code Journal</h2>
 <nav>
   <ul>
-    <li><a class="navlink" ui-sref="home">HOME</a></li>
-    <li><a class="navlink" ui-sref="journal">JOURNAL</a></li>
-    <li><a class="navlink" ui-sref="jquery">JQUERY</a></li>
-    <li><a class="navlink" ui-sref="javascript">JAVASCRIPT</a></li>
-    <li><a class="navlink" ui-sref="misc">MISC</a></li>
-    <li><a class="navlink" ui-sref="sass">CSS-SASS</a></li>
-    <li><a class="navlink" ui-sref="angular">ANGULAR</a></li>
+    <li class="navlink-container"><a ui-sref="home">HOME</a></li>
+    <li class="navlink-container"><a ui-sref="journal">JOURNAL</a></li>
+    <li class="navlink-container"><a ui-sref="jquery">JQUERY</a></li>
+    <li class="navlink-container"><a ui-sref="javascript">JAVASCRIPT</a></li>
+    <li class="navlink-container"><a ui-sref="misc">MISC</a></li>
+    <li class="navlink-container"><a ui-sref="sass">CSS-SASS</a></li>
+    <li class="navlink-container"><a ui-sref="angular">ANGULAR</a></li>
   </ul>
 </nav>
+<!-- <aside style="color: white">This is from a directive
+  <span class="happy">scope is {{state}}</span></aside> -->
