--- a/index.html
+++ b/index.html
@@ -14,20 +14,8 @@
   </head>
   <body>
   <div class="bg-image"></div>
-  <h2 id="appName">Code Journal</h2>
   <navdirective></navdirective>
-  <!-- <nav>
-    <ul>
-      <li><a ui-sref="home">HOME</a></li>
-      <li><a ui-sref="journal">JOURNAL</a></li>
-      <li><a ui-sref="jquery">JQUERY</a></li>
-      <li><a ui-sref="javascript">JAVASCRIPT</a></li>
-      <li><a ui-sref="misc">MISC</a></li>
-      <li><a ui-sref="sass">CSS-SASS</a></li>
-      <li><a ui-sref="angular">ANGULAR</a></li>
-    </ul>
-  </nav> -->
-<main ui-view></main>
+  <main ui-view></main>
 
 
 <!-- ------------Scripts ------------------ -->
@@ -40,6 +28,7 @@
 
 <script src="./js/app.js"></script>
 <script src="./js/mainservice.js"></script>
+<script src="./js/maincontroller.js"></script>
 <script src="./js/navdirective.js"></script>
 
 <!-- ----------STATES----------- -->
