Adds styling cleanup. Adjusts some details in the directive, etc.

--- a/states/angular/angular.html
+++ b/states/angular/angular.html
@@ -1,6 +1,16 @@
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?skin=desert"></script>
 <aside><span class="rot90">{{state}}</span></aside>
 <div class="angular-entry entry">
+  <pre>
+    <h4>Timers</h4>
+    <pre class="prettyprint w80">
+      function() {
+        //some code here.
+      }
+    </pre>
+  </pre>
+
+<hr>
 
 <pre>
 <h2 class="ltblue">Angular</h2>
