--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,7 +21,31 @@
     <ol class="done">
 
 
-    </ol>   -->
+    </ol>
+      -->
+    <hr>
+    <h2 class="date">Monday May 8th, 2017</h2>
+    <h4 class="sleep">Slept: 9 hours</h4><br><br>
+    <h3 class="subtitle">Did lots of work on directives. Still having trouble with scope.<br><br />Am advised to default to '<' one-way binding scope. Still not sure how to leverage it in an app, though.
+    <br><br /> I did some work on timers and will add to js entries. Progress, all-in-all is forward 😃.<br /><br />
+    I've been here a week. This week node & Sql and SVG need work. Let's get to it.</h3>
+
+    <br>
+    <h3>To do:</h3>
+    <ol id="sidebar" class="todo">
+      <li>2 jquery tuts+ effects vids</li>
+      <li>sugar-substitute</li>
+      <li>transfer jquery notes in to codejournal</li>
+      <li>one FCC algorithm</li>
+      <li>sass vid</li>
+      <li>in Sass section of journal add centering elements section</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>Kirupa/Dan Wellman tutorial notes on timers.</li>
+      <li></li>
+
+    </ol>
     <hr>
     <h2 class="date">Saturday May 7th, 2017</h2>
     <h4 class="sleep">Slept: 8 hours</h4><br><br>
