--- a/states/jquery/jquery.html
+++ b/states/jquery/jquery.html
@@ -94,9 +94,9 @@ I can use the call method & send another arg to the doIt function;
 </div>
 <div class="code-questions">
   <h2 class="ltgreen ">Select miss piggy and arnold the pig using .find()</h2><br>
-    <code class=" ans ctr">$('ul').find('li').css('color', 'red');</code>
+    <code class="ans">$('ul').find('li').css('color', 'red');</code>
   <h2 class="ltgreen ">What will the following code do?</h2><br>
-    <code class=" ctr">$('ol').children('li').first().css('color', 'pink')</code>
+    <code>$('ol').children('li').first().css('color', 'pink')</code>
     <h2 class="ans">turn bears pink only</h2>
   </div>
 <div class="code-questions2">
