--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -43,7 +43,7 @@
     <h3>Done: </h3>
     <ol class="done">
       <li>Kirupa/Dan Wellman tutorial notes on timers.</li>
-      <li></li>
+      <li>Finally a section on requestAnimationFrame</li>
 
     </ol>
     <hr>
