--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -23,6 +23,26 @@
 
     </ol>
       -->
+    <h2 class="date">Monday May 9th, 2017</h2>
+    <h4 class="sleep">Slept: 6 hours</h4><br><br>
+    <h3 class="subtitle">Did lots of work on directives. Still having trouble with scope.<br><br />Am advised to default to '<' one-way binding scope. Still not sure how to leverage it in an app, though.
+    <br><br /> Events last night & more today. --Would like to continue with jQuery and get closer to finishing the sass tutorials.</h3>
+
+    <br>
+    <h3>To do:</h3>
+    <ol id="sidebar" class="todo">
+      <li>2 jquery tuts+ effects vids</li>
+      <li>js events</li>
+      <li>transfer jquery notes in to codejournal</li>
+      <li>FCC algorithm</li>
+      <li>sass vids</li>
+      <li>in Sass section of journal add centering elements section</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>Placeholder</li>
+
+    </ol>
     <hr>
     <h2 class="date">Monday May 8th, 2017</h2>
     <h4 class="sleep">Slept: 9 hours</h4><br><br>
@@ -44,6 +64,7 @@
     <ol class="done">
       <li>Kirupa/Dan Wellman tutorial notes on timers.</li>
       <li>Finally a section on requestAnimationFrame</li>
+      <li>Started lynda (Villalobos) tutes on js events & Kirupa's tutes on requestAnimationFrame()</li>
 
     </ol>
     <hr>
